--- a/mempool/docker-compose.yml
+++ b/mempool/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: $APP_MEMPOOL_PORT
       PROXY_AUTH_ADD: "false"
   web:
-    image: mempool/frontend:latest
+    image: mempool/frontend:v2.5.0-rc1
     user: "1000:1000"
     init: true
     restart: on-failure
@@ -16,14 +16,14 @@ services:
     environment:
       FRONTEND_HTTP_PORT: $APP_MEMPOOL_PORT
       BACKEND_MAINNET_HTTP_HOST: $APP_MEMPOOL_API_IP
-      LIGHTNING: "false"
       NGINX_PORT: $APP_MEMPOOL_PORT
       NGINX_HOSTNAME: $APP_MEMPOOL_API_IP
+      LIGHTNING_DETECTED_PORT: $APP_LIGHTNING_NODE_PORT
     networks:
       default:
         ipv4_address: $APP_MEMPOOL_IP
   api:
-    image: mempool/backend:latest
+    image: mempool/backend:v2.5.0-rc1
     user: "1000:1000"
     init: true
     restart: on-failure
@@ -31,6 +31,7 @@ services:
     command: "./wait-for-it.sh mariadb:3306 --timeout=720 --strict -- ./start.sh"
     volumes:
       - ${APP_DATA_DIR}/data:/backend/cache
+      - ${UMBREL_ROOT}/app-data/lightning/data/lnd:/lnd:ro
     environment:
       CORE_RPC_HOST: $APP_BITCOIN_NODE_IP
       CORE_RPC_PORT: $APP_BITCOIN_RPC_PORT
@@ -49,7 +50,14 @@ services:
       MEMPOOL_CLEAR_PROTECTION_MINUTES: "20"
       MEMPOOL_INDEXING_BLOCKS_AMOUNT: "52560"
       MEMPOOL_STDOUT_LOG_MIN_PRIORITY: "debug"
-      LIGHTNING_ENABLED: "false"
+      LIGHTNING_ENABLED: "true"
+      LIGHTNING_BACKEND: "lnd"
+      LIGHTNING_STATS_REFRESH_INTERVAL: 3600
+      LIGHTNING_GRAPH_REFRESH_INTERVAL: 3600
+      LND_TLS_CERT_PATH: "/lnd/tls.cert"
+      LND_MACAROON_PATH: "/lnd/data/chain/bitcoin/$APP_BITCOIN_NETWORK/readonly.macaroon"
+      LND_REST_API_URL: "https://$APP_LIGHTNING_NODE_IP:$APP_LIGHTNING_NODE_REST_PORT"
+      LND_TIMEOUT: 120000
     networks:
        default:
          ipv4_address: $APP_MEMPOOL_API_IP
