--- a/mempool/docker-compose.yml
+++ b/mempool/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: $APP_MEMPOOL_PORT
       PROXY_AUTH_ADD: "false"
   web:
-    image: mempool/frontend:v2.5.0-rc1
+    image: mempool/frontend:v2.5.0@sha256:253c97b92a0af6c723edede6702162384acbee95bc7cdaed31a2fd2d0422ed70
     user: "1000:1000"
     init: true
     restart: on-failure
@@ -23,7 +23,7 @@ services:
       default:
         ipv4_address: $APP_MEMPOOL_IP
   api:
-    image: mempool/backend:v2.5.0-rc1
+    image: mempool/backend:v2.5.0@sha256:df9a7e55387af13098d1b2ed084ae6bcebccc41b7dd7fcab32a210d368a27f86
     user: "1000:1000"
     init: true
     restart: on-failure
